NEWS: If the new Steam UI has broken any functionality with DZGUI for you, please submit a report.