@@ -1,1 +1,2 @@
-NEWS: If the new Steam UI has broken any functionality with DZGUI for you, please submit a report.
+NEWS: Due to layoffs at my employer, I am without a main source of income. If you have enjoyed DZGUI in the past, please consider donating to the project. Thank you.
+
